--- a/todo.txt
+++ b/todo.txt
@@ -54,13 +54,10 @@ User Stories to finish current MMF:
 - polish: make 'clear' button depress when clear event received?
 
 Engineering Tasks:
-* Figure out why our tests are sporadically failing
-- Decide whether or not to keep Socket.IO (or replace it with another tool)
-
+* Prevent tests from sporadically failing
+- Change httpServer.stop() to realTimeServer.stop() in _real_time_server_test.js's afterEach() function
 - Consider Martin Grandrath's Socket.IO initialization suggestion, E509
 - Re-enable smoke tests' browser version check
 
 To Do on current task:
-* Isolate race condition in one test
-- Reproduce race condition with a minimal spike
-- Check out Matthias Åslund's pull request, E516
+* Add callback to createSocket()
