--- a/todo.txt
+++ b/todo.txt
@@ -60,5 +60,6 @@ Engineering Tasks:
 
 To Do on current task:
 * Modify http_server.js to not have a stop() function; put it in real_time_server instead
+- Have HttpServer.stop() fail fast and explain that RealTimeServer.stop instead
 - Unhack afterEach in _real_time_server_test.js - use realTimeServer.stop()
 - Unhack Server.stop() - use realTimeServer.stop()
