--- a/todo.txt
+++ b/todo.txt
@@ -54,7 +54,14 @@ User Stories to finish current MMF:
 - polish: make 'clear' button depress when clear event received?
 
 Engineering Tasks:
+* Update our RealTimeServerTest to use promises
+- Update RealTimeServerTest promises to use async/await
+- Go into RealTimeServerTest's dependencies and update them to use promises & async/await as well
 - OFF CAMERA: Re-enable smoke tests' browser version check
 
 To Do on current task:
--
+* closeSocket()
+- Get JSHint to work with Promise
+- createSocket()
+- httpServer.start()
+- waitForConnectionCount()
