Convert RealTimeServer tests' createSocket() to use promise

--- a/todo.txt
+++ b/todo.txt
@@ -61,7 +61,5 @@ Engineering Tasks:
 - OFF CAMERA: Re-enable smoke tests' browser version check
 
 To Do on current task:
-- Get JSHint to work with Promise
-- createSocket()
+* waitForConnectionCount()
 - httpServer.start()
-- waitForConnectionCount()
