--- a/todo.txt
+++ b/todo.txt
@@ -61,5 +61,5 @@ Engineering Tasks:
 - OFF CAMERA: Re-enable smoke tests' browser version check
 
 To Do on current task:
-* waitForConnectionCount()
-- httpServer.start()
+* httpServer.start()
+- realTimeServer.stop()
