--- a/todo.txt
+++ b/todo.txt
@@ -55,11 +55,12 @@ User Stories to finish current MMF:
 
 Engineering Tasks:
 * Update our RealTimeServerTest to use promises
+- Update IDE to support ES7 syntax (=> and async/await)
 - Migrate from JSHint to ESLint for async/await
 - Update RealTimeServerTest promises to use async/await
 - Go into RealTimeServerTest's dependencies and update them to use promises & async/await as well
 - OFF CAMERA: Re-enable smoke tests' browser version check
 
 To Do on current task:
-* httpServer.start()
-- realTimeServer.stop()
+* realTimeServer.stop()
+- httpServer.stop()
