--- a/todo.txt
+++ b/todo.txt
@@ -54,8 +54,7 @@ User Stories to finish current MMF:
 - polish: make 'clear' button depress when clear event received?
 
 Engineering Tasks:
-* Update our RealTimeServerTest to use promises
-- Update IDE to support ES7 syntax (=> and async/await)
+* OFF CAMERA: Update IDE to support ES7 syntax (=> and async/await)
 - Migrate from JSHint to ESLint for async/await
 - Update RealTimeServerTest promises to use async/await
 - Go into RealTimeServerTest's dependencies and update them to use promises & async/await as well
@@ -63,5 +62,3 @@ Engineering Tasks:
 - OFF CAMERA: Re-enable smoke tests' browser version check
 
 To Do on current task:
-* realTimeServer.stop()
-- httpServer.stop()
