--- a/todo.txt
+++ b/todo.txt
@@ -58,6 +58,7 @@ Engineering Tasks:
 - Migrate from JSHint to ESLint for async/await
 - Update RealTimeServerTest promises to use async/await
 - Go into RealTimeServerTest's dependencies and update them to use promises & async/await as well
+- Parallelize RealTimeServerTest's open/close (ref Martin Grandrath, E530 comment)
 - Convert to ES6 class syntax?
 - OFF CAMERA: Re-enable smoke tests' browser version check
 
