Modify lint_runner.js to use ESLint instead of JSHint

--- a/todo.txt
+++ b/todo.txt
@@ -62,6 +62,6 @@ Engineering Tasks:
 - OFF CAMERA: Re-enable smoke tests' browser version check
 
 To Do on current task:
-* Modify our build infrastructure to use it
+* Modify ESLint config to work with our build infrastructure
 - Decide on ruleset
 - Fix issues with code
