Add (and hook up) eslint.conf.js

--- a/todo.txt
+++ b/todo.txt
@@ -62,6 +62,7 @@ Engineering Tasks:
 - OFF CAMERA: Re-enable smoke tests' browser version check
 
 To Do on current task:
-* Modify ESLint config to work with our build infrastructure
-- Decide on ruleset
+* Get rid of `globals` parameters in lint_runner.js
+- Decide on ruleset and globals
 - Fix issues with code
+- Delete jshint.conf.js
