--- a/todo.txt
+++ b/todo.txt
@@ -54,12 +54,10 @@ User Stories to finish current MMF:
 - polish: make 'clear' button depress when clear event received?
 
 Engineering Tasks:
-* Migrate from JSHint to ESLint for async/await
-- Update RealTimeServerTest promises to use async/await
+* Update RealTimeServerTest promises to use async/await
 - Go into RealTimeServerTest's dependencies and update them to use promises & async/await as well
 - Parallelize RealTimeServerTest's open/close (ref Martin Grandrath, E530 comment)
 - Convert to ES6 class syntax?
 - OFF CAMERA: Re-enable smoke tests' browser version check
 
 To Do on current task:
-* Delete jshint.conf.js
