--- a/todo.txt
+++ b/todo.txt
@@ -61,7 +61,6 @@ Engineering Tasks:
 - OFF CAMERA: Re-enable smoke tests' browser version check
 
 To Do on current task:
-- Server
-- HttpServerTest
+* HttpServerTest
 - run.js
 - Modify Server.start() and Server.stop() to not take callback
