Convert _http_server_test.js to use async/await

--- a/todo.txt
+++ b/todo.txt
@@ -62,5 +62,7 @@ Engineering Tasks:
 
 To Do on current task:
 * HttpServerTest
+	- modify createTestFile and deleteTestFile
 - run.js
 - Modify Server.start() and Server.stop() to not take callback
+- revise _real_time_server_test.js waitForConnectionCount() to use promises instead of async?
