--- a/todo.txt
+++ b/todo.txt
@@ -55,12 +55,8 @@ User Stories to finish current MMF:
 
 Engineering Tasks:
 * Update promise code to use async/await
-- Go into RealTimeServerTest's dependencies and update them to use promises & async/await as well
-- Parallelize RealTimeServerTest's open/close (ref Martin Grandrath, E530 comment)
 - Convert to ES6 class syntax?
 - OFF CAMERA: Re-enable smoke tests' browser version check
 
 To Do on current task:
-- run.js
-- Modify Server.start() and Server.stop() to not take callback
-- revise _real_time_server_test.js waitForConnectionCount() to use promises instead of async?
+* revise _real_time_server_test.js waitForConnectionCount() to use promises instead of async?
