--- a/todo.txt
+++ b/todo.txt
@@ -26,9 +26,10 @@ Minimum Marketable Features:
 - more collaborative features?
 
 User Stories to finish current MMF:
-- make mouse pointer disappear when user disconnects
+* make mouse pointer disappear when user intentionally disconnects (navigates away, reloads, etc.)
+- make mouse pointer disappear when user loses connectivity
 - time out inactive users (make their pointers disappear)
-- reconnect and resync when client is disconnected
+- reconnect and resync when client is disconnected/reconnected
 - show disconnection warning / other UX when client is disconnected
 - handle server reset smoothly (clear the drawing? re-sync to browsers? not persistence/DB)
 - handle packet loss (What packet loss is possible? TCP handles this? What about unstable cellular connections?)
@@ -53,7 +54,10 @@ User Stories to finish current MMF:
 - polish: make 'clear' button depress when clear event received?
 
 Engineering Tasks:
--
+* Spike code that sends a socket.io event upon intentional disconnect
+- Make event classes (which ones?) for disconnection
+- Modify client code to send an event when disconnection occurs
+- Modify server code to reflect disconnection events to all other browsers
 
 To Do on current task:
 -
