--- a/todo.txt
+++ b/todo.txt
@@ -59,5 +59,5 @@ Engineering Tasks:
 - Look into accidental disconnection
 
 To Do on current task:
-- Why does our new production code cause our tests to hang?
+* Why does our new production code cause our tests to hang?
 - asyncify listening for socket.io events in RealTimeServer tests?
