--- a/todo.txt
+++ b/todo.txt
@@ -56,9 +56,11 @@ User Stories to finish current MMF:
 Engineering Tasks:
 * Modify server code to send 'remove pointer' events to all other browsers when client disconnects
 - Resolve order-of-operations issue when reloading -- server seems to get client move event *after* disconnect event.
-- Look into accidental disconnection
+- Look into accidental disconnection--try the spike
 
 To Do on current task:
+* Create a client module for Socket.IO tests (clean up the duplication between _server_test.js and _real_time_server_test.js)
+* Convert TestClient to ES6 class syntax
+- Wait until server side is complete when creating and closing sockets
 - asyncify listening for socket.io events in RealTimeServer tests?
-- Clean up the duplication between _server_test.js and _real_time_server_test.js
 - Create a clean shutdown for RealTimeServer.stop that waits for connections to close?
