--- a/todo.txt
+++ b/todo.txt
@@ -55,12 +55,13 @@ User Stories to finish current MMF:
 
 Engineering Tasks:
 * Modify server code to send 'remove pointer' events to all other browsers when client disconnects
+- Convert all server code to ES6 class syntax
 - Resolve order-of-operations issue when reloading -- server seems to get client move event *after* disconnect event.
 - Look into accidental disconnection--try the spike
 
 To Do on current task:
-* Convert TestClient to ES6 class syntax
-- Wait until server side is complete when creating and closing sockets
-- Move waitForConnectionCount() to TestClient
+* Wait until server side is complete when creating and closing sockets
+- Remove RealTimeServer.numberOfActiveConnections()?
+- Move waitForConnectionCount() to TestClient (or remove it?)
 - asyncify listening for socket.io events in RealTimeServer tests?
 - Create a clean shutdown for RealTimeServer.stop that waits for connections to close?
