--- a/todo.txt
+++ b/todo.txt
@@ -54,11 +54,8 @@ User Stories to finish current MMF:
 - polish: make 'clear' button depress when clear event received?
 
 Engineering Tasks:
-* Prevent ghost pointer from reappearing on reload
-	* Fix the design flaw that allowed the bug to occur
-- Look into accidental disconnection--try the spike
-- Convert all server code to ES6 class syntax
+* Convert all server code to ES6 class syntax
 - Rename event.toSerializableObject() to event.payload() (and corresponding "fromPayload()" or similar)
+- Look into accidental disconnection--try the spike
 
 To Do on current task:
-* Fix emit() duplication in handleSocketIoEvents
