Rename events' toSerializableObject() --> payload()

--- a/todo.txt
+++ b/todo.txt
@@ -54,8 +54,7 @@ User Stories to finish current MMF:
 - polish: make 'clear' button depress when clear event received?
 
 Engineering Tasks:
-* Convert all server code to ES6 class syntax
-- Rename event.toSerializableObject() to event.payload() (and corresponding "fromPayload()" or similar)
+* Rename event.toSerializableObject() to event.payload() (and corresponding "fromPayload()" or similar)
 - Look into accidental disconnection--try the spike
 
 To Do on current task:
