--- a/todo.txt
+++ b/todo.txt
@@ -61,3 +61,5 @@ To Do on current task:
 - add assert.gte()
 * elapsedTime() of some sort
 - setInterval() of some sort
+- add promisified version of setTimeout()
+- use Clock.setTimeout() in RealTimeServer tests
