First test on road to timing out inactive users

--- a/todo.txt
+++ b/todo.txt
@@ -59,4 +59,7 @@ Engineering Tasks:
 	- use Clock.setTimeout() in RealTimeServer tests
 
 To Do on current task:
+- Test it better
+- Clean up our ability to listen for events in RealTimeServerTest?
+
 - Rename Clock.setInterval() to prevent confusion? (Its return value is different than the real setInterval)
