Add promise-based way to listen for events in RealTimeServerTest

--- a/todo.txt
+++ b/todo.txt
@@ -59,7 +59,11 @@ Engineering Tasks:
 	- use Clock.setTimeout() in RealTimeServer tests
 
 To Do on current task:
-- Test it better
-- Clean up our ability to listen for events in RealTimeServerTest?
+* Clean up our ability to listen for events in RealTimeServerTest?
+- Send event when there's no activity for any client
+- Send event when there's no activity for a specific client
+- Don't send event multiple times after a client has become inactive
+- Don't send event to clients that have disconnected
+
 
 - Rename Clock.setInterval() to prevent confusion? (Its return value is different than the real setInterval)
