--- a/todo.txt
+++ b/todo.txt
@@ -59,8 +59,8 @@ Engineering Tasks:
 	- use Clock.setTimeout() in RealTimeServer tests
 
 To Do on current task:
-* Send event when there's no activity for any client
-- Send event when there's no activity for a specific client
+* Send event only when there's no activity
+- Send event only when there's no activity for that client
 - Don't send event multiple times after a client has become inactive
 - Don't send event to clients that have disconnected
 
