Replace hard-coded client timeout with a constant

--- a/todo.txt
+++ b/todo.txt
@@ -60,11 +60,7 @@ Engineering Tasks:
 	- use Clock.setTimeout() in RealTimeServer tests
 
 To Do on current task:
-* "doesn't time out" test
-	* detect when server has received client event
-	- detect when server has sent 'remove pointer' event
-- Stop hardcoding timeout
-- Send event only when there's no activity for that client
+* Send event only when there's no activity for that client
 - Don't send event multiple times after a client has become inactive
 - Don't send event to clients that have disconnected
 
