Start working on 'only one timeout event' test again

--- a/todo.txt
+++ b/todo.txt
@@ -61,8 +61,7 @@ Engineering Tasks:
 	- use Clock.setTimeout() in RealTimeServer tests
 
 To Do on current task:
-* Implement onNextServerEmit()
-- Don't send event multiple times after a client has become inactive
+* Don't send event multiple times after a client has become inactive
 - Don't track state of clients that have disconnected
 
 
