--- a/todo.txt
+++ b/todo.txt
@@ -62,6 +62,11 @@ Engineering Tasks:
 
 To Do on current task:
 * Factor out Socket.IO tests
+		- "clientConnect" event
+		- "clientDisconnect" event
+		- emitToOneClient
+		- broadcastToAllClients
+		- broadcastToAllClientsButOne
 	- Remove RealTimeServer from SocketIoAbstraction tests
 - Factor out business logic
 	- Review user comments (at top of RealTimeServer)
