--- a/todo.txt
+++ b/todo.txt
@@ -62,9 +62,7 @@ Engineering Tasks:
 
 To Do on current task:
 * Factor out Socket.IO tests
-	- emitToOneClient
-	- broadcastToAllClients
-	- broadcastToAllClientsButOne
+	* broadcastToAllClientsButOne
 - Factor out business logic
 	- Review user comments (at top of RealTimeServer)
 - Factor out business logic tests
