--- a/todo.txt
+++ b/todo.txt
@@ -62,9 +62,8 @@ Engineering Tasks:
 - Test that client and server talk to each other correctly; not just that they can talk to Socket.IO, but specifically that they talk to each other
 
 To Do on current task:
-* Rename SocketIoAbstraction and RealTimeServer to be more accurate for their new functions
-- Move SocketIoAbstraction.start() call out of RealTimeServer and into Server.
-- Modify SocketIoAbstraction to be testable without a live network
+* Move SocketIoAbstraction.start() call out of RealTimeLogic and into Server.
+- Modify RealTimeServer to be testable without a live network
 - Refactor business logic tests to not use network
 - Remove unnecessary(?) business logic methods
 	- numberOfActiveConnections
@@ -72,7 +71,6 @@ To Do on current task:
 	- simulateClientEvent
   - onNextClientEvent
   - onNextServerEmit
-- Absorb RealTimeServer back into Server.js and rename business logic and Socket.IO abstraction if needed
 - Look for opportunities to improve Socket.IO abstraction API
 	- Unify event sending parameters as suggested by Martin Grandrath's in E582 comments - http://www.letscodejavascript.com/v3/comments/live/582#comment-3675682857
 - Race condition in "sends 'remove pointer' event to other browsers when client disconnects"
