--- a/todo.txt
+++ b/todo.txt
@@ -62,8 +62,8 @@ Engineering Tasks:
 - Test that client and server talk to each other correctly; not just that they can talk to Socket.IO, but specifically that they talk to each other
 
 To Do on current task:
-* Move SocketIoAbstraction.start() call out of RealTimeLogic and into Server.
-- Modify RealTimeServer to be testable without a live network
+* Move RealTimeServer.start() call out of RealTimeLogic and into Server.
+- Modify RealTimeLogic to be testable without a live network
 - Refactor business logic tests to not use network
 - Remove unnecessary(?) business logic methods
 	- numberOfActiveConnections
