Fix bug that results in wrong client pointer being removed on timeout

--- a/todo.txt
+++ b/todo.txt
@@ -62,9 +62,8 @@ Engineering Tasks:
 - Test that client and server talk to each other correctly; not just that they can talk to Socket.IO, but specifically that they talk to each other
 
 To Do on current task:
-* Implement RealTimeServer.createNull()
-- Refactor business logic tests to not use network
-- Remove unnecessary(?) business logic methods
+* Refactor business logic tests to not use network
+- Refactor business logic code, including removing unnecessary(?) business logic methods
 	- numberOfActiveConnections
 	- isSocketConnected
 	- simulateClientEvent
